RenderTextHarfBuzz: Don't draw newline glyph.

r441290 added support for multi-line selection to RenderTextHarfBuzz. It also
changed the code such that the newline glyph was drawn in some cases. This can
lead to the display of an unwanted glyph corresponding to the newline character
for certain fonts.

To fix, modify RenderTextHarfBuzz::DrawVisualText so that newline glyph is not
drawn.

BUG=680430

Review-Url: https://codereview.chromium.org/2630453005
Cr-Commit-Position: refs/heads/master@{#444272}

Former-commit-id: 6d5cb27adaa84acccadd7880f1a94cb635ebac7c